# brain0

./: .editorconfig  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  cla.yml  release.yml
cla/: README.md  ccla.md  icla.md
crates/brain0-agentsrc/: Cargo.toml
crates/brain0-agentsrc/src/: claude.rs  codex.rs  discovery.rs  driver.rs  event.rs  jsonl.rs  lib.rs  redact.rs  scope.rs  secret.rs  source.rs  summarize.rs
crates/brain0-attest/: Cargo.toml
crates/brain0-attest/src/: lib.rs
crates/brain0-cli/: Cargo.toml
crates/brain0-cli/src/: main.rs  mcp_query.rs  query.rs  report.rs  rewind.rs  today.rs
crates/brain0-crypto/: Cargo.toml
crates/brain0-crypto/src/: lib.rs
crates/brain0-identity/: Cargo.toml
crates/brain0-identity/src/: lib.rs  similarity.rs
crates/brain0-mcp/: Cargo.toml
crates/brain0-mcp/src/: lib.rs
crates/brain0-model/: Cargo.toml
crates/brain0-model/src/: attribution.rs  declared.rs  edge.rs  id.rs  lib.rs  node.rs  risk.rs  version.rs
crates/brain0-models/: Cargo.toml
crates/brain0-models/src/: config.rs  embed.rs  lib.rs  summarize.rs
crates/brain0-observer/: Cargo.toml
crates/brain0-observer/src/: checkpoint.rs  git.rs  lib.rs
crates/brain0-parser/: Cargo.toml
crates/brain0-parser/src/: extract.rs  fingerprint.rs  lib.rs
crates/brain0-policy/: Cargo.toml
crates/brain0-policy/src/: lib.rs
crates/brain0-reconcile/: Cargo.toml
crates/brain0-reconcile/src/: lib.rs
crates/brain0-risk/: Cargo.toml
crates/brain0-risk/src/: lib.rs
crates/brain0-storage/: Cargo.toml
crates/brain0-storage/src/: backend.rs  lib.rs  payload.rs  sqlite.rs  summary_cache.rs
crates/brain0-storage/tests/: concurrency.rs
docs/: agent-artifacts.md  attestation.md  governance.md  models.md  open-core.md  security.md
schema/: sqlite.sql
scripts/: dev.mjs  e2e.sh  governance-smoke.sh  release-pack.mjs
