[package]
name = "brain0-agentsrc"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Passive ingest of coding-agent artifacts (transcripts + memory) for brain0"

[lints]
workspace = true

[dependencies]
brain0-model.workspace = true
brain0-storage.workspace = true
brain0-reconcile.workspace = true
brain0-models.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
blake3.workspace = true
dirs.workspace = true
walkdir.workspace = true
regex.workspace = true
