[package]
name = "brain0-model"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core data model for brain0: bipartite multi-level decision graph"

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
thiserror.workspace = true
chrono.workspace = true
