[package]
name = "brain0-models"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Configurable local model providers for brain0 (summarizer + embedder, Ollama by default)"

[lints]
workspace = true

[dependencies]
brain0-storage.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ureq.workspace = true
